--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URI=mongodb://localhost:27017/
+DATABASE_URI=mongodb+srv://mmadeshraina:gVfevn3GYuQMxkZT@cluster0.nxwe8ed.mongodb.net/
 DATABASE_NAME=Admindashboard
 JWT_SECRET_KEY = Madesh_admindashboard
